--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title></title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/fetch.js"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId: '238006731357748',
+                cookie: true,                     // Enable cookies to allow the server to access the session.
+                xfbml: true,                     // Parse social plugins on this webpage.
+                version: 'v10.0'           // Use this Graph API version for this call.
+            });
+
+            var callback = function(response) {
+                console.log(response);
+            }
+            FB.getLoginStatus(callback);
+        };
+    </script>
 </head>
 <body>
     <h1 id="cv"><a href="#!welcome">Curriculum Vitae</a></h1>
